<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.hazani.chagit.homeexpensemanagment.LoginFragment"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/padding_title_top"
        android:id="@+id/loginTVtitle" />


    <Button
        android:paddingTop="@dimen/padding_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_go_to_registration"
        android:textColor="@color/textColor"
        android:id="@+id/loginBNotRegistered"
        android:layout_below="@+id/loginTVtitle"
        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        android:ems="10"
        android:id="@+id/loginEtEmail"
        android:textColorHint="@color/textColor"
        android:hint="@string/email"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/padding_top"
        android:layout_below="@+id/loginBNotRegistered"
        android:gravity="right"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:ems="10"
        android:id="@+id/loginEtPassword"
        android:textColorHint="@color/textColor"
        android:hint="@string/password"
        android:layout_below="@+id/loginEtEmail"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/padding_top"
        android:gravity="right"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/textColor"
        android:id="@+id/loginEtName"
        android:textColorHint="@color/textColor"
        android:hint="@string/username"
        android:layout_below="@+id/loginEtPassword"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/padding_top"
        android:gravity="right"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/loginBForgotPassword"
        android:layout_below="@+id/loginEtName"
        android:textColor="@color/textColor"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/padding_top"
        android:paddingLeft="@dimen/padding_horizontal"
        android:gravity="left"
        android:layout_toStartOf="@+id/loginTVtitle" />

    <LinearLayout
        android:id="@+id/loginLinearLayoutCheckBox"
        android:layout_below="@+id/loginEtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:paddingTop="@dimen/padding_top"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/create_account_as_main_account"
            android:paddingLeft="@dimen/padding_horizontal"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginCbIsCreatedAsMainAccount"
            android:theme="@style/EditTextTheme"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:id="@+id/loginEtEmailMainAccount"
        android:hint="@string/main_account_email"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/padding_top"
        android:layout_below="@+id/loginBForgotPassword"
        android:gravity="right"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/textColor"
        android:id="@+id/loginEtPasswordMainAccount"
        android:textColorHint="@color/textColor"
        android:hint="@string/main_account_password"
        android:layout_below="@+id/loginEtEmailMainAccount"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/padding_top"
        android:gravity="right"/>

    <LinearLayout
        android:id="@+id/containerButtons"
        android:layout_below="@+id/loginEtPasswordMainAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/loginBCancel"
            android:textColor="@color/textColor"
            android:background="@android:color/transparent" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginBLogin"
            android:textColor="@color/textColor"
            android:background="@android:color/transparent" />


    </LinearLayout>

</RelativeLayout>
